Fix pagination margin on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2009,6 +2009,7 @@ textarea:focus:-ms-input-placeholder {
 .pagination ul li {
   list-style-type: none;
   display: inline-block;
+  margin-bottom: 1rem;
 }
 .pagination ul li a {
   color: #414243;
