--- a/assets/scss/partials/archive.scss
+++ b/assets/scss/partials/archive.scss
@@ -162,6 +162,7 @@
 		li {
 			list-style-type: none;
 			display: inline-block;
+            margin-bottom: 1rem;
 
 			a {
 				color: $base-color;
